Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103101

qmllint: Produce better unqualified access warnings for models

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.4.0 Beta1
    • 6.3.0
    • QML: Tooling
    • None
    • 8db0402e72 (qt/qtdeclarative/dev) 8db0402e72 (qt/tqtc-qtdeclarative/dev)

      Right now we warn about models in delegates and recommend accessing the parent element by id. This is an extremely bad idea since you actually want to access the model for the current item in the delegate, not all of them.

        For Gerrit Dashboard: QTBUG-103101
        # Subject Branch Project Status CR V

            max.goldstein Maximilian Goldstein
            max.goldstein Maximilian Goldstein
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes