tests/auto/qml/qmllint/data/delegateContextProperties.qml
@@ -1,0 +1,9 @@
+import QtQuick
+
+ListView {
+   model: ListModel {}
+   delegate: Text {
+       text: model.text
+       color: index % 2 ? "red" : "blue"
+   }
+}
